# step-sequencer

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: rust.yml
docs/: Beatmaker.md  MIDI_libraries.md  Timeline.md
docs/notes/: midir_precise_timing.md
playground/: Cargo.toml
src/: beatmaker.rs  drum_track.rs  error.rs  lib.rs  main.rs  midi.rs  project.rs
src/audio/: mod.rs
src/audio/coreaudio/: midi_client.rs  mod.rs  step_sequencer_client.rs
src/audio/jack/: mod.rs  step_sequencer_client.rs
src/beatmaker/: beat_timer.rs  mod.rs  pattern.rs
src/midi/: note.rs
step-sequencer/: Cargo.toml
step-sequencer-cli/: Cargo.toml
step-sequencer-cli/src/: main.rs  tui.rs  widgets.rs
step-sequencer-cli/src/ui/: mod.rs  popup.rs  tracker_view.rs
step-sequencer-gui/: .gitignore  components.d.ts  package-lock.json  package.json  vite.config.ts
step-sequencer-gui/src/: App.vue  Beat.vue  Track.vue  TrackerView.vue  main.ts
step-sequencer-gui/src-tauri/: Cargo.toml  tauri.conf.json
step-sequencer-gui/src-tauri/src/: lib.rs  main.rs
step-sequencer-gui/src/DetailPanel/: DetailPanel.vue
step-sequencer-gui/src/MainPanel/: MainControl.vue
step-sequencer-gui/src/TrackerView/: Beat.vue  Track.vue  TrackerView.vue
step-sequencer-gui/src/assets/: track.css
step-sequencer-tui/: Cargo.toml
step-sequencer-tui/src/: command.rs  main.rs  tui.rs
step-sequencer-tui/src/ui/: mod.rs  styles.rs  tracker_view.rs
step-sequencer/src/: command.rs  consts.rs  drum_track.rs  error.rs  id.rs  launcher.rs  lib.rs  project.rs  timeline.rs
step-sequencer/src/audio/: async_processor.rs  mod.rs  util.rs
step-sequencer/src/audio/adapter/: mod.rs
step-sequencer/src/audio/coreaudio/: midi_adapter.rs  mod.rs  step_sequencer_client.rs  step_sequencer_client2.rs  util.rs
step-sequencer/src/audio/cpal/: mod.rs
step-sequencer/src/audio/jack/: midi_adapter.rs  mod.rs  step_sequencer_client.rs  step_sequencer_client2.rs
step-sequencer/src/beatmaker/: beat_sorter.rs  beat_sorter_old.rs  beat_time.rs  beat_timer.rs  mod.rs  pattern.rs
step-sequencer/src/engine/: mod.rs
step-sequencer/src/engine/coreaudio/: mod.rs  step_sequencer_client.rs  util.rs
step-sequencer/src/engine/cpal/: mod.rs
step-sequencer/src/engine/jack/: step_sequencer_client.rs
step-sequencer/src/launcher/: launcher2.rs  launcher_impl.rs  launcher_impl2.rs  mod.rs  util.rs
step-sequencer/src/midi/: mod.rs  note.rs
step-sequencer/src/models/: channel_subscription.rs  mod.rs
step-sequencer/src/util/: interval_executor.rs  mod.rs
