[package]
name = "step-sequencer"
version = "0.1.0"
edition = "2021"

[dependencies]
casey = "0.4.0"
derive_builder = "0.20.2"
env_logger = "0.11.6"
indexmap = "2.7.0"
log = "0.4.22"
regex = "1.11.1"
thiserror = "2.0.8"
uuid = { version = "1.11.0", features = ["fast-rng", "macro-diagnostics", "v4"] }

[target.'cfg(target_os="linux")'.dependencies]
jack = "0.13.0"

[target.'cfg(target_os="macos")'.dependencies]
coreaudio-rs = "0.12.1"
coremidi = "0.8.0"
