[package]
name = "step-sequencer"
version = "0.1.0"
edition = "2024"

[dependencies]
casey = "0.4.0"
derive_builder = "0.20.2"
env_logger = "0.11.6"
indexmap = "2.7.0"
log = "0.4.22"
regex = "1.11.1"
thiserror = "2.0.8"
uuid = { version = "1.11.0", features = ["fast-rng", "macro-diagnostics", "v4"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
fraction = { version = "0.15.3", features = ["with-serde-support"] }
serde = { version = "1.0.217", features = ["derive"] }
mockall = "0.13.1"

# Optional dependencies
jack = { version = "0.13.0", optional = true }
coreaudio-rs = { version = "0.12.1", optional = true }
coremidi = { version = "0.8.0", optional = true }
mach = { version = "0.3.2", optional = true }
cpal = { version = "0.17.0", optional = true }

[features]
cpal = ["dep:cpal"]
cpal-jack = ["cpal?/jack"]
cpal-asio = ["cpal?/asio"]
jack = ["dep:jack"]
coreaudio = ["dep:coreaudio-rs", "dep:coremidi", "dep:mach"]
