[package]
name = "step-sequencer-gui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "step_sequencer_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
env_logger = "0.11.6"
tauri-plugin-log = "2"

[target.'cfg(target_os="windows")'.dependencies]
step-sequencer = { path = "../../step-sequencer", features = ["jack"] }

[target.'cfg(target_os="linux")'.dependencies]
step-sequencer = { path = "../../step-sequencer", features = ["jack"] }

[target.'cfg(target_os="macos")'.dependencies]
step-sequencer = { path = "../../step-sequencer", features = ["coreaudio"] }
